entrypoint.sh: add -vmargs for opens and update